# Meta

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  app.py  apply_fixes.sh  apply_patches.py  baseline.py  baseline.py.bak  conftest.py  data_generators.py  diff_utf8.patch  expert_tasks.py  failed_list.txt  failures.txt  failures_utf8.txt  final_pytest.txt  inference.py  inference.py.bak  models.py  only_failed.txt  openenv.yaml  openenv.yaml.bak  parse_failures.py  patch_diff.patch  pyproject.toml  report.xml  requirements.txt  reset_fail.txt  test_out.txt  test_out2.txt
Meta/: README.md  __init__.py  baseline.py  client.py  models.py  openenv.yaml  pyproject.toml
Meta/openenv_Meta.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
Meta/server/: Dockerfile  Meta_environment.py  __init__.py  app.py  requirements.txt
baseline/: run_baseline.py
environments/code_review/: env.py
environments/content_moderation/: env.py
environments/data_cleaning/: env.py
environments/email_triage/: env.py
openenv_Meta.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: Meta_environment.py  Meta_environment.py.bak  __init__.py  app.py  app.py.bak  gradio_ui.py  gradio_ui.py.bak  requirements.txt
tests/: test_environment.py  test_envs.py
