# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-Meta"
version = "0.1.0"
description = "Meta Multi-Agent OpenEnv — Email Triage, Code Review, Data Cleaning, Content Moderation"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.1",
    "openai>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "Meta.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["Meta", "Meta.server"]
package-dir = { "Meta" = ".", "Meta.server" = "server" }
